# GroupGen

./: .gitignore  .pylintrc  CodeReviewChecklist.txt  README.md  STYLEGUIDE.md  helloWorld.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: ticket-template.md
.github/workflows/: black.yml  mypy.yml  pylint.yml  pytest.yml
assets/: MainWindow.py  main_window.ui  untitled.ui
scripts/: pyuic.bat  pyuic.sh  winrelease.bat  winrelease.sh
src/: app.py  data_manager.py  data_structure_formatter.py  data_structures.py  dataset.py  excel_tool.py  hello_world.py
src/algorithm/: objective_function.py  random_algorithm.py  simulated_annealing_algorithm.py
src/app_functionality/: push_buttons.py
src/assets/: main_window.py
src/interface/: data_filter.py  data_interface.py  data_map.py
src/ui/: algorithm_worker.py  attribute_merge_table.py  attribute_table_items.py  hello_world.ui  hello_xml.py
test/: test_data_manager.py
test_data/: excel_reader_test_0.xlsx  excel_writer_test_0.xlsx  test_data_short_1.xlsx  test_data_tall_1.xlsx
tests/: test_app.py  test_attribute_merge_table.py  test_conversion.py  test_data_structures.py  test_excel_tool.py  test_github.py
tests/algorithm/: test_annealing_algorithm.py  test_objective_function.py  test_random_algorithm.py
tests/ui/: conftest.py  test_app.py  test_attribute_merge_table.py
