[project]
name = "group_gen"
version = "0.1.0"
authors = [
  {name = "Moritz Breiting"},
  {name = "Benedek Major"},
  {name = "David Schäfer"},
  {name = "Tjark Stallmann"},
  {name = "Daniel Wirth"},
]

readme = "README.md"
license = {file = "COPYING"}

requires-python = ">= 3.12"

dependencies = [
  "openpyxl"
]

[project.optional-dependencies]
cli = []
gui = [
  "PyQt6"
]
dev = [
  "black==24.8.0",
  "pytest",
  "pylint",
  "mypy"
]

[project.gui-scripts]
group_gen = "group_gen:app"

[tool.black]
target-version = ["py312"]
required-version = "24.8.0"
fast = false

