[project]
name = "group_gen"
version = "0.1.0"
authors = [
  {name = "Moritz Breiting"},
  {name = "Benedek Major"},
  {name = "David Schäfer"},
  {name = "Tjark Stallmann"},
  {name = "Daniel Wirth"},
]

readme = "README.md"
license = {file = "COPYING"}

requires-python = ">= 3.12"

dependencies = [
  "openpyxl",
  "python_calamine"
]

[project.optional-dependencies]
cli = []
gui = [
  "PyQt6"
]
dev = [
  "black==24.8.0",
  "pytest",
  "pylint",
  "mypy",
  "coverage"
]
release = [
  "PyInstaller"
]

[project.gui-scripts]
group_gen = "app:main"

[tool.black]
target-version = ["py312"]
required-version = "24.8.0"
fast = false

[tool.setuptools.package-data]
group_gen = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
ignore_missing_imports = true
implicit_optional = true
warn_unreachable = true

